Add logging messages

--- a/html/enrollment_message.html
+++ b/html/enrollment_message.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <p>Be ready to study, here you have your credentials and link, Dont hesitate contact us by email, whatasapp, etc..</p>
-    <span><b>Username:</b> {{username}}</span>
-    <span><b>Password:</b> {{password}}</span>
+    <span><b>Username:</b> {{username}}</span><br>
+    <span><b>Password:</b> {{password}}</span><br>
     <a href="{{moodle_url}}">
-        <button>Go To Course</button>
+        <button type="button">Go To Course</button>
     </a>
 </body>
 </html>
