Updating enrollment message

--- a/html/enrollment_message.html
+++ b/html/enrollment_message.html
@@ -37,7 +37,7 @@
         }
 
         a {
-            color: #3869D4;
+            color: #013765;
         }
 
         a img {
@@ -131,13 +131,13 @@
         /* Buttons ------------------------------ */
 
         .button {
-            background-color: #3869D4;
-            border-top: 10px solid #3869D4;
-            border-right: 18px solid #3869D4;
-            border-bottom: 10px solid #3869D4;
-            border-left: 18px solid #3869D4;
+            background-color: #013765;
+            border-top: 10px solid #013765;
+            border-right: 18px solid #013765;
+            border-bottom: 10px solid #013765;
+            border-left: 18px solid #013765;
             display: inline-block;
-            color: #FFF;
+            color: #FFF !important;
             text-decoration: none;
             border-radius: 3px;
             box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16);
@@ -508,7 +508,7 @@
                                                         <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                                         <tr>
                                                             <td align="center">
-                                                            <a href="{{moodle_url}}" class="f-fallback button button--blue" target="_blank">Go To Course</a>
+                                                            <a href="{{moodle_url}}" class="f-fallback button button--blue" target="_blank"><b>Go To Course</b></a>
                                                             </td>
                                                         </tr>
                                                         </table>
