Update enrollment message

--- a/static/html/enrollment_message.html
+++ b/static/html/enrollment_message.html
@@ -497,6 +497,8 @@
                                         <div class="f-fallback">
                                             <h1>Hi {{name}} {{lastname}},</h1>
                                             <p>Be ready to study, here you have your credentials and access link, Dont hesitate contact us by email, whatasapp, etc...</p>
+                                            <span><b>{{course_title}}</b></span>
+                                            <img src="{{course_image_url}}" alt="{{course_title}}">
                                             <span><b>Username:</b> {{username}}</span><br>
                                             <span><b>Password:</b> {{password}}</span><br>
                                             <!-- Action -->
