Update enrollment message

--- a/static/html/enrollment_message.html
+++ b/static/html/enrollment_message.html
@@ -498,7 +498,7 @@
                                             <h1>Hi {{name}} {{lastname}},</h1>
                                             <p>Be ready to study, here you have your credentials and access link, Dont hesitate contact us by email, whatasapp, etc...</p>
                                             <span><b>{{course_title}}</b></span>
-                                            <img src="{{course_image_url}}" alt="{{course_title}}">
+                                            <img style="max-width: 200px; height: auto;" src="{{course_image_url}}" alt="{{course_title}}">
                                             <span><b>Username:</b> {{username}}</span><br>
                                             <span><b>Password:</b> {{password}}</span><br>
                                             <!-- Action -->
