--- a/static/html/enrollment_message.html
+++ b/static/html/enrollment_message.html
@@ -497,7 +497,7 @@
                                         <div class="f-fallback">
                                             <h1>Hi {{name}} {{lastname}},</h1>
                                             <p>Be ready to study, here you have your credentials and access link, Dont hesitate contact us by email, whatasapp, etc...</p>
-                                            <span><b>{{course_title}}</b></span><br>
+                                            <span><b>{{course_title}}</b></span><br><br>
                                             <img style="display: block; margin-left: auto; margin-right: auto; max-width: 400px; height: auto;" src="{{course_image_url}}" alt="{{course_title}}"><br><br>
                                             <span><b>Username:</b> {{username}}</span><br>
                                             <span><b>Password:</b> {{password}}</span><br>
