Updating admin notification

--- a/static/html/admin_notification.html
+++ b/static/html/admin_notification.html
@@ -7,6 +7,6 @@
     <title>Course enrollment failed</title>
 </head>
 <body>
-    An error ocurred while trying to check {{tuition_id}} tuition status. You'll find a log file attach to this message. It contains all the outputs made by each task.
+    An error ocurred while trying to check {{tuition_id}} tuition status. You'll find a log file attached to this message. It contains all the outputs made by each task.
 </body>
 </html>
